# ByeTex

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  RELEASE_NOTES_v0.3.0.md  install.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
agents/: byetex-dogfood-tester.md  byetex-visual-grader.md
context/: latex-context.md  typst-context.md
corpus/: manifest.json
crates/byetex-cli/: Cargo.toml
crates/byetex-cli/src/: main.rs  project.rs
crates/byetex-cli/tests/: agent_brief_content.rs  cli_folder_input.rs  convert_compile.rs  diagnose.rs  diagnose_typ.rs  doctor_check.rs  mcp_smoke.rs  project_materializer.rs  review.rs
crates/byetex-core/: Cargo.toml  build.rs
crates/byetex-core/src/: bib.rs  class_map.rs  compile.rs  diagnose.rs  document.rs  emit.rs  ir.rs  lib.rs  package_macros.rs  project.rs  skill_map.rs  skills.rs  snippet.rs  source_map.rs  style_profile.rs  typst_diag.rs  validate.rs  warnings.rs
crates/byetex-core/src/emit/: bibliography.rs  boundary.rs  braceless.rs  environments.rs  escape.rs  figures.rs  inline.rs  macros.rs  math.rs  math_symbols.rs  node_utils.rs  preamble.rs  sections.rs  tables.rs  typography.rs
crates/byetex-core/tests/: abstract_block_style.rs  abstract_command.rs  acl_author_block.rs  acl_page_geometry.rs  addcontentsline_drop.rs  algnewcommand_macro.rs  algorithm_body.rs  algorithmic_env.rs  algorithmic_rendering.rs  amsart_style.rs  angle_bracket_escape.rs  appendix_counter.rs  asset_discovery.rs  authblk_affil.rs  author_block_sanitize.rs  author_font_leak.rs  author_marker_leaks.rs  author_parsing.rs  bare_brace_group.rs  bbl_fallback.rs  bbl_makeatletter_preamble.rs  beamer_accent_color.rs  beamer_alt.rs  beamer_appendix_heading.rs  beamer_aspectratio.rs  beamer_blocks.rs  beamer_column_command.rs  beamer_columns.rs  beamer_drop.rs  beamer_frames.rs  beamer_input_detection.rs  beamer_metropolis_section_slide.rs  beamer_overlays.rs  beamer_pagegeom.rs  beamer_section_slide.rs  beamer_standout_frame.rs  beamer_subtitle.rs  beamer_title_color.rs  beamer_titleless_frame.rs  beamer_titleslide.rs  (+220 more)
crates/byetex-core/tests/data/: katex_exclusions.toml  katex_extracted.json
crates/byetex-core/tests/fixtures/asset-discovery/: refs.bib
crates/byetex-core/tests/fixtures/mini-project/: main.tex
crates/byetex-core/tests/fixtures/mini-project-escape/: main.tex
crates/byetex-mcp/: Cargo.toml
crates/byetex-mcp/src/: lib.rs
crates/bytetex-cli/: Cargo.toml
crates/bytetex-cli/src/: main.rs  project.rs
crates/bytetex-cli/tests/: mcp_smoke.rs  project_materializer.rs
crates/bytetex-core/: Cargo.toml  build.rs
crates/bytetex-core/src/: class_map.rs  document.rs  emit.rs  lib.rs  parser.rs  project.rs  warnings.rs
crates/bytetex-core/tests/: asset_discovery.rs  bugfix_regressions.rs  compile_check.rs  corpus_parse_smoke.rs  golden_m1.rs  golden_m2.rs  golden_m3.rs  golden_m4.rs  golden_v02.rs  input_expansion.rs  project_conversion.rs  properties.rs  template_budgets.rs  warnings_schema.rs
crates/bytetex-core/tests/fixtures/asset-discovery/: main.tex
crates/bytetex-core/tests/fixtures/mini-project/: refs.bib
crates/bytetex-core/tests/fixtures/multi-bib/: main.tex
crates/bytetex-mcp/: Cargo.toml
crates/bytetex-mcp/src/: lib.rs
docs/: agent-surface-backlog.jsonl  agent-surface-backlog.md  architecture.md  autonomous-dev.md  beamer-touying-design.md  beamer-touying-target.typ  beamer-track.md  conversion-logic.md  emit-refactor-insights.md  fidelity-backlog.md  fidelity-nonvisual-audit.json  fidelity-nonvisual-audit.md  fidelity-rubric.md  for-agents.md  getting-started.md  plugin-setup.md  scorecard.md  tectonic-integration-analysis.md  test-plan.md  test-results-2026-05-23.md  tier1-baseline-2026-06-15.md  truth-render-status.md  visual-regression-2026-05-23.md  visual-regression-2026-05-24.md  visual-regression-2026-05-25.md  visual-regression-2026-05-25b.md  visual-regression-2026-05-25c.md  warnings.schema.json
hooks/: hooks.json
packaging/: README.md  byetex.rb
scripts/: README.md  acceptance.sh  acceptance_baseline.json  acceptance_check.py  build_gallery.py  build_release_local.sh  corpus_add_local.py  corpus_clean.sh  corpus_harvest.py  corpus_sweep.sh  dogfood.py  extract_katex.py  fidelity_audit.py  fidelity_baseline.json  fidelity_check.py  fidelity_gate.sh  findings_diff.py  harvest_templates.py  render_corpus_summary.py  requirements.txt  roundtrip.sh  setup_corpus.py  setup_truth_deps.sh  sync_agents.sh  test_dogfood.py  truth_render.py  visual_test.py
scripts/ci/: verify_katex_extraction.sh
scripts/tests/: acceptance_check_test.py  corpus_sweep_oracle_test.sh  corpus_truth_gate_test.py  grading_packet_test.py  roundtrip_smoke_test.sh  source_anchored_test.py  ssim_fidelity_test.py  structural_metrics_test.py  visual_test_truth_source_test.py
skills/: INDEX.md  byetex-bibliography.md  byetex-custom-macros.md  byetex-figures-subpar.md  byetex-math.md  byetex-parse-error.md  byetex-repair-loop.md  byetex-tables-layout.md  byetex-tikz-to-typst.md  byetex-unsupported-environment.md  byetex-using-warnings-json.md  byetex-visual-grading.md  bytetex-bibliography.md  bytetex-custom-macros.md  bytetex-parse-error.md  bytetex-tikz-to-typst.md  bytetex-unsupported-environment.md  bytetex-using-warnings-json.md
skills/byetex-beamer/: SKILL.md
skills/byetex-book/: SKILL.md
skills/byetex-getting-started/: SKILL.md
skills/byetex-math/: SKILL.md
skills/byetex-repair-loop/: SKILL.md
templates/: README.md
tests/: visual
(+61 files in other folders)
