[workspace]
resolver = "2"
members = [
    "crates/byetex-core",
    "crates/byetex-cli",
    "crates/byetex-mcp",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zeyuyang42/ByeTex"
rust-version = "1.84"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tree-sitter = "0.24"
cc = "1"
insta = "1"
tempfile = "3"
