[package]
name = "byetex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for the ByeTex LaTeX -> Typst converter."

[[bin]]
name = "byetex"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
byetex-core = { path = "../byetex-core" }
byetex-mcp = { path = "../byetex-mcp", optional = true }
clap.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }

[features]
default = ["mcp"]
mcp = ["dep:byetex-mcp", "dep:tokio"]

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
