[package]
name = "byetex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Core LaTeX -> Typst conversion library used by the ByeTex CLI."
keywords = ["latex", "typst", "converter", "parser"]
categories = ["text-processing", "parser-implementations"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tree-sitter.workspace = true

[build-dependencies]
cc.workspace = true

[dev-dependencies]
insta.workspace = true
proptest = "1"
serde.workspace = true
toml.workspace = true
tempfile.workspace = true
