[package]
name = "bytetex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core LaTeX -> Typst conversion library used by the ByeTex CLI."

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true

[build-dependencies]
cc.workspace = true

[dev-dependencies]
insta.workspace = true
proptest = "1"
tempfile.workspace = true
