[package]
name = "bytetex-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP server exposing the ByeTex converter to AI agents over stdio."

[dependencies]
anyhow.workspace = true
bytetex-core = { path = "../bytetex-core" }
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
schemars = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
